hphp/hack/test/typecheck/like_types/dynamic_coercion/varargs.php.exp
File "varargs.php", line 8, characters 5-6:
Invalid argument (Typing[4110])
File "varargs.php", line 5, characters 19-20:
Expected int (variadic argument)
File "varargs.php", line 7, characters 12-18:
But got dynamic
File "varargs.php", line 13, characters 5-9:
Invalid argument (Typing[4110])
File "varargs.php", line 5, characters 19-20:
Expected int (variadic argument)
File "varargs.php", line 13, characters 5-9:
But got string
